--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,3 +14,16 @@ dependencies:
     git:
       url: https://github.com/bettdouglas/postgresql-dart.git
       ref: 84887fe204a9fa90178569d2ea0aef492be45267
+  analyzer: ">=0.35.0 <2.0.0"
+  angel_model: ^1.0.0
+  angel_serialize: ^2.0.0
+  angel_serialize_generator: ^2.0.0
+  build: ^1.0.0
+  build_config: ^0.4.0
+  code_builder: ^3.0.0
+  dart_style: ^1.0.0
+  inflection2: ^0.4.2
+  meta: ^1.0.0
+  path: ^1.0.0
+  recase: ^2.0.0
+  source_gen: ^0.9.0
