--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,15 +11,15 @@ dependencies:
     git:
       url: https://github.com/bettdouglas/postgresql-dart.git
       ref: 84887fe204a9fa90178569d2ea0aef492be45267
-  analyzer: 0.39.17
-  build: 1.0.0
-  build_config: 0.4.0
-  code_builder: 3.0.0
-  dart_style: 1.0.0
-  inflection2: 0.4.2
-  path: 1.0.0
-  recase: 3.0.0
-  source_gen: 0.9.0
-  code_buffer: 1.0.0
+  analyzer: ^0.39.17
+  build: ^1.0.0
+  build_config: ^0.4.0
+  code_builder: ^3.0.0
+  dart_style: ^1.0.0
+  inflection2: ^0.4.2
+  path: ^1.0.0
+  recase: ^3.0.0
+  source_gen: ^0.9.0
+  code_buffer: ^1.0.0
   quiver: ^2.0.0
-  quiver_hashcode: 2.0.0
+  quiver_hashcode: ^2.0.0
